@@ -57,7 +57,7 @@ Source: "..\Debug\libcurl.dll"; DestDir: {app}; Flags: ignoreversion;
 ;Source: "..\Windows Libraries\OpenZwave\Release\OpenZWave.dll"; DestDir: {app}; Flags: ignoreversion;
 Source: "..\..\Manual\DomoticzManual.pdf"; DestDir: {app}; Flags: ignoreversion;
 Source: "..\..\History.txt"; DestDir: {app}; Flags: ignoreversion;
-Source: "..\svnversion.h"; DestDir: {app}; Flags: ignoreversion;
+Source: "..\..\svnversion.h"; DestDir: {app}; Flags: ignoreversion;
 Source: ".\nssm.exe"; DestDir: {app}; Flags: ignoreversion;
 
 [Icons]
