@@ -201,6 +201,7 @@
 						<option value="101">Harrison Curtain</option>
 						<option value="102">RFY</option>
 						<option value="103">Meiantech Security</option>
+						<option value="104">HE105</option>
 						<option value="206">Blinds T6 DC106</option>
 			</select>
 			</td>
@@ -308,6 +309,14 @@
 				</tr>
 				<tr id="blindparamsUnitCode">
 					<td align="right"><label>Unit Code:</label></td>
+					<td><select id="combounitcode" style="width:60px" class="combobox ui-corner-all"></select></td>
+				</tr>
+			</table>
+		</div>
+		<div id="he105params">
+			<table class="display" border="0" cellpadding="0" cellspacing="20">
+				<tr>
+					<td align="right" style="width:110px"><label>Unit Code:</label></td>
 					<td><select id="combounitcode" style="width:60px" class="combobox ui-corner-all"></select></td>
 				</tr>
 			</table>
